Add 2 new layouts - Add activity_registration - Add activity_type_selection

--- a/app/src/main/res/layout/activity_type_selection.xml
+++ b/app/src/main/res/layout/activity_type_selection.xml
@@ -1,41 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:padding="20dp"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:background="@drawable/authorization_background"
+        android:paddingStart="20sp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".GreetingActivity"
-        android:background="@drawable/authorization_background"
-        >
-
-
+        tools:context=".TypeSelectionActivity">
 
     <TextView
+            android:id="@+id/create_account_text"
             android:fontFamily="@font/proxima_nova_bold"
             android:layout_marginTop="60sp"
-            android:id="@+id/greeting_app_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:text="@string/app_name"
+            android:text="@string/account_create"
             android:textSize="40sp"
             android:textColor="#FFFFFF"
-            />
-
-    <TextView
-            android:fontFamily="@font/proxima_nova_regular"
-            android:textColor="#FFFFFF"
-
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/greeting_app_name"
-            android:text="@string/app_description"
-            android:layout_marginTop="5sp"
-            android:textSize="20sp"
-
             />
 
     <LinearLayout
@@ -50,10 +33,10 @@
             android:paddingStart="50sp"
             >
         <Button
-                android:id="@+id/sign_in"
+                android:id="@+id/student_button"
                 android:layout_width="match_parent"
                 android:layout_height="60sp"
-                android:text="@string/sign_in"
+                android:text="@string/student"
                 android:textSize="15sp"
                 android:textAllCaps="false"
                 android:backgroundTint="@color/BE_yellow"
@@ -62,16 +45,17 @@
 
                 />
         <Button
+                android:id="@+id/teacher_button"
                 android:textSize="15sp"
                 android:textAllCaps="false"
-                android:id="@+id/log_in"
                 android:layout_width="match_parent"
                 android:layout_height="60sp"
-                android:text="@string/log_in"
+                android:text="@string/teacher"
                 android:backgroundTint="@color/BE_black"
                 android:textColor="@color/BE_yellow"
                 />
     </LinearLayout>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
