--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -4,7 +4,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:background="@drawable/authorization_background"
-        android:paddingStart="20sp"
+        android:padding="25sp"
         android:layout_height="match_parent"
         tools:context=".RegistrationActivity">
 
