--- a/app/src/main/res/layout/activity_type_selection.xml
+++ b/app/src/main/res/layout/activity_type_selection.xml
@@ -3,7 +3,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:background="@drawable/authorization_background"
-        android:paddingStart="20sp"
+        android:padding="25sp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".TypeSelectionActivity">
