--- a/app/src/main/res/layout/activity_type_selection.xml
+++ b/app/src/main/res/layout/activity_type_selection.xml
@@ -1,22 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:background="@drawable/authorization_background"
-        android:padding="25sp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="activities.TypeSelectionActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/authorization_background"
+    android:padding="25dp"
+    tools:context="com.ninjapath.besteducation.activities.TypeSelectionActivity">
 
     <ImageButton
         android:id="@+id/backArrow"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginTop="4dp"
         android:background="@null"
         android:scaleType="centerCrop"
         android:src="@drawable/arrow_icon"
-        app:layout_constraintBottom_toTopOf="@+id/create_account_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.002"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,25 +24,25 @@
         android:id="@+id/create_account_text"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="70dp"
         android:fontFamily="@font/proximanova_extrabold"
         android:text="@string/account_create"
         android:textColor="#FFFFFF"
         android:textSize="40sp"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/student_button"
         android:layout_width="330dp"
-        android:layout_height="60dp"
+        android:layout_height="70dp"
         android:backgroundTint="@color/BE_yellow"
+        android:fontFamily="@font/proximanova_semibold"
         android:text="@string/student"
         android:textAllCaps="false"
         android:textColor="@color/BE_black"
         android:textSize="15sp"
-        android:fontFamily="@font/proximanova_semibold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -55,7 +53,7 @@
     <Button
         android:id="@+id/teacher_button"
         android:layout_width="330dp"
-        android:layout_height="60dp"
+        android:layout_height="70dp"
         android:layout_marginTop="4dp"
         android:backgroundTint="@color/BE_black"
         android:fontFamily="@font/proximanova_semibold"
