--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:background="#22333B"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
@@ -14,9 +15,12 @@
         />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:background="#30444E"
             android:id="@+id/bottom_navigation"
             android:orientation="horizontal"
             android:layout_width="match_parent"
+            app:itemIconTint="@color/bottom_nav_icon"
+            app:itemTextColor="@color/bottom_nav_icon"
             android:layout_height="wrap_content"
             app:menu="@menu/bottom_navigation"
             app:layout_constraintBottom_toBottomOf="parent"
