--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,7 @@
 
     <color name="BE_black">#181818</color>
     <color name="BE_yellow">#F8F024</color>
+    <color name="bottom_nav_icon">#96A7AF</color>
+
+    <color name="toolbar">#4F5155</color>
 </resources>
