--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
             app:itemIconTint="@color/bottom_nav_icon"
             app:itemTextColor="@color/bottom_nav_icon"
             android:layout_height="wrap_content"
-            app:menu="@menu/bottom_navigation"
+            app:menu="@menu/student_bottom_navigation"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
