--- a/app/src/main/res/layout/fragment_chats.xml
+++ b/app/src/main/res/layout/fragment_chats.xml
@@ -8,7 +8,7 @@
     <TextView
             android:layout_centerInParent="true"
             android:layout_width="wrap_content"
-            android:text="@string/app_name"
+            android:text="@string/chats"
             android:layout_height="wrap_content"/>
 
 </RelativeLayout>
