--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,7 +7,7 @@
     <TextView
             android:layout_centerInParent="true"
             android:layout_width="wrap_content"
-            android:text="@string/app_name"
+            android:text="@string/profile"
             android:layout_height="wrap_content"/>
 
 
