--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="bottom_nav_icon">#96A7AF</color>
 
     <color name="toolbar">#4F5155</color>
+    <color name="background_black">#22333B</color>
     <color name="grey">#30444E</color>
     <color name="red">#FF2929</color>
 </resources>
