Small changes - ToDo : fix color in boyyomnavigation

--- a/app/src/main/res/menu/student_bottom_navigation.xml
+++ b/app/src/main/res/menu/student_bottom_navigation.xml
@@ -4,18 +4,18 @@
     <item
             android:icon="@drawable/search_icon"
             android:id="@+id/nav_home"
-            android:title="@string/home"
+            android:title=""
             />
     <item
             android:icon="@drawable/chat_icon"
             android:id="@+id/nav_chats"
-            android:title="@string/home"
+            android:title=""
             />
     <item
-
+            android:tint="@color/BE_yellow"
             android:icon="@drawable/profile_icon"
             android:id="@+id/nav_profile"
-            android:title="@string/home"
+            android:title=""
             />
 
 </menu>
