--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,12 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:background="#22333B"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".activities.MainActivity">
 
     <FrameLayout
+        android:background="#22333b"
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -19,9 +19,10 @@
             android:id="@+id/bottom_navigation"
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            app:itemIconTint="@color/bottom_nav_icon"
+            app:itemIconTint="@drawable/bottom_nav_icon_color_selector"
             app:itemTextColor="@color/bottom_nav_icon"
             android:layout_height="wrap_content"
+            app:labelVisibilityMode="unlabeled"
             app:menu="@menu/student_bottom_navigation"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
