--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,14 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:padding="30dp">
+
+    <ImageView
+            android:id="@+id/profile_avatar"
+            android:layout_width="125dp"
+            android:layout_height="128dp"
+            android:src="@mipmap/ic_launcher"
+            android:contentDescription="@string/spam"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
 
     <TextView
-            android:layout_centerInParent="true"
+            android:id="@+id/user_name"
             android:layout_width="wrap_content"
-            android:text="@string/profile"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:text="@string/spam"
+            android:textColor="@color/white"
+            android:fontFamily="@font/proxima_nova_bold"
+            android:textSize="20sp"
+            android:layout_marginLeft="24dp"
+            app:layout_constraintLeft_toRightOf="@id/profile_avatar"
+            app:layout_constraintTop_toTopOf="@id/profile_avatar"
+            />
+
+    <TextView
+            android:id="@+id/user_email"
+            android:layout_width="wrap_content"
+            android:textColor="@color/white"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/user_name"
+            app:layout_constraintLeft_toLeftOf="@id/user_name"
+            android:text="@string/spam_email"
+            />
 
 
-</RelativeLayout>
+    <Button
+
+            android:id="@+id/send_button"
+            android:layout_width="0dp"
+            android:textColor="@color/BE_yellow"
+            android:text="@string/send_message"
+            android:layout_height="60dp"
+            android:backgroundTint="@color/grey"
+            android:layout_marginEnd="20dp"
+            android:textAllCaps="false"
+            android:layout_marginTop="28dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintRight_toLeftOf="@id/subscribe_button"
+            app:layout_constraintTop_toBottomOf="@id/profile_avatar"
+            />
+
+    <Button
+            android:id="@+id/subscribe_button"
+            android:backgroundTint="@color/BE_yellow"
+            android:text="@string/subscribe"
+            android:textAllCaps="false"
+            android:textColor="@color/grey"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintTop_toTopOf="@id/send_button"
+            app:layout_constraintLeft_toRightOf="@id/send_button"
+            app:layout_constraintRight_toRightOf="parent"
+
+            />
+
+    <TextView
+            android:id="@+id/courses_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/courses"
+            android:fontFamily="@font/proxima_nova_bold"
+            android:textSize="25sp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/send_button"
+            />
+
+    <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            app:layout_constraintTop_toBottomOf="@id/courses_text"
+            app:layout_constraintLeft_toLeftOf="parent"
+        />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
