--- a/app/src/main/res/drawable/bottom_nav_icon_color_selector.xml
+++ b/app/src/main/res/drawable/bottom_nav_icon_color_selector.xml
@@ -2,8 +2,8 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_checked="true" android:color="@android:color/black" />
-    <item android:state_pressed="true" android:state_enabled="true" android:color="@color/BE_yellow" />
+    <item android:state_checked="true" android:color="@color/BE_yellow" />
+    <item android:state_pressed="true" android:state_enabled="true" android:color="@color/grey_yellow" />
     <item android:color="@color/white" />
 
 </selector>
