--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -38,6 +38,17 @@
             android:text="@string/spam_email"
             />
 
+    <RatingBar
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            app:layout_constraintLeft_toLeftOf="@id/user_email"
+            app:layout_constraintTop_toBottomOf="@id/user_email"
+            app:layout_constraintRight_toRightOf="parent"
+
+            android:rating="1"
+
+        />
+
 
     <Button
 
@@ -84,11 +95,22 @@
             />
 
     <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/courses_recycle_view"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             app:layout_constraintTop_toBottomOf="@id/courses_text"
             app:layout_constraintLeft_toLeftOf="parent"
         />
+
+    <Button
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/grey"
+            android:text="@string/discussions"
+            android:textColor="@color/BE_yellow"
+            app:layout_constraintTop_toBottomOf="@id/courses_recycle_view"
+            app:layout_constraintLeft_toLeftOf="parent"
+            />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
