--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.MyApplication" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:textAllCaps">false</item>
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/toolbar</item>
         <item name="colorPrimaryVariant">@color/BE_black</item>
