--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -38,20 +38,8 @@
             android:text="@string/spam_email"
             />
 
-    <RatingBar
-            android:layout_width="0dp"
-            android:layout_height="100dp"
-            app:layout_constraintLeft_toLeftOf="@id/user_email"
-            app:layout_constraintTop_toBottomOf="@id/user_email"
-            app:layout_constraintRight_toRightOf="parent"
-
-            android:rating="1"
-
-        />
-
 
     <Button
-
             android:id="@+id/send_button"
             android:layout_width="0dp"
             android:textColor="@color/BE_yellow"
@@ -97,7 +85,7 @@
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/courses_recycle_view"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="110dp"
             app:layout_constraintTop_toBottomOf="@id/courses_text"
             app:layout_constraintLeft_toLeftOf="parent"
         />
@@ -110,7 +98,7 @@
             android:textColor="@color/BE_yellow"
             app:layout_constraintTop_toBottomOf="@id/courses_recycle_view"
             app:layout_constraintLeft_toLeftOf="parent"
-            />
+            android:layout_marginTop="40dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
