CreateActivity changes - CreateActivity code was refactored - Now user can course appears in database - Created support classes for database work - Added new values in colors.xml and strings.xml - activity_create.xml updated
Signed-off-by: “Parkhomenko <parkhomenko2049@gmail.com>

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="grey">#30444E</color>
     <color name="red">#FF2929</color>
     <color name="grey_yellow">#A19B00</color>
+    <color name="green">#1FCF00</color>
 </resources>
