--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -85,7 +85,7 @@
         app:layout_constraintVertical_bias="0.02" />
 
     <Spinner
-        android:id="@+id/type_spinner"
+        android:id="@+id/lessons_type"
         android:layout_width="330dp"
         android:layout_height="50dp"
         android:background="@drawable/spinner_style"
@@ -109,8 +109,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/type_spinner"
         app:layout_constraintHorizontal_bias="0.044"
-        app:layout_constraintStart_toStartOf="@+id/type_spinner"
-        app:layout_constraintTop_toBottomOf="@+id/type_spinner"
+        app:layout_constraintStart_toStartOf="@+id/lessons_type"
+        app:layout_constraintTop_toBottomOf="@+id/lessons_type"
         app:layout_constraintVertical_bias="0.086" />
 
     <ImageButton
