--- a/app/src/main/res/layout/courses_card.xml
+++ b/app/src/main/res/layout/courses_card.xml
@@ -22,9 +22,14 @@
                 />
 
         <TextView
-                
+                android:id="@+id/signature"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/image_card"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:text="test"
 
                 />
 
