--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="red">#FF2929</color>
     <color name="grey_yellow">#A19B00</color>
     <color name="green">#1FCF00</color>
+    <color name="light_grey">#BABABA</color>
 </resources>
