--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:padding="30dp">
+        >
+
+
+
+<androidx.constraintlayout.widget.ConstraintLayout
+        android:padding="30dp"
+
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <ImageView
             android:id="@+id/profile_avatar"
@@ -86,7 +96,7 @@
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/courses_recycle_view"
             android:layout_width="match_parent"
-            android:layout_height="110dp"
+            android:layout_height="160dp"
             app:layout_constraintTop_toBottomOf="@id/courses_text"
             app:layout_constraintLeft_toLeftOf="parent"
         />
@@ -129,3 +139,4 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
